<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Libro de ejemplo -->
    <string name="example_title">Juego de Tronos</string>
    <string name="example_subtitle">Canción de hielo y fuego 1</string>
    <string name="example_author">George R.R. Martin</string>

    <!-- Main -->
    <string name="app_name">BooX</string>
    <string name="hello_world">Hello world!</string>

    <!-- Splash -->
    <string name="title_activity_splash_screen">BooX</string>
    <string name="splash_screen_subtitle">Cross your books</string>
    <string name="splash_screen_loading">Loading…</string>
 
    <!-- Tabs -->
    <string name="title_activity_tabs">BooX</string>
    <string name="tab1">Books</string>
    <string name="tab2">Crossings</string>
    <string name="tab3">Friends</string>
    <string name="menu_settings">Settings</string>
    <string name="submenu_add">Add new</string>
    <string name="submenu_profile">Profile</string>
    <string name="submenu_settings">Settings</string>
    <string name="submenu_add_list">Add list</string>
    <string name="submenu_find_friend">Find Friends</string>
    <string name="submenu_about">About</string>
    <string name="submenu_logout">Logout</string>
    <string name="submenu_share">Share</string>
    <string name="bar_search">Search bar</string>

    <!-- BookList -->
    <string name="title_activity_book_list">Book List</string>
    <string name="booklist_add_book">Add book to this list</string>
    <string name="booklist_remove_book">Remove from this list</string>
    <string name="booklist_delete_list">Delete list</string>
    <string name="book_deleted">Book deleted</string>
    <string name="remove_from_all">Sorry , you can\'t delete books from list All</string>

    <!-- Book -->
    <string name="title_activity_book_fragment">Book</string>
    <string name="title_activity_book_activity">Book</string>
    <string name="book_description_title">Description</string> <!--  -->

    <!-- CrossingList -->
    <string name="title_activity_crossing_list">Crossing List</string>

    <!-- Crossing -->
    <string name="title_activity_crossing">Crossing</string>

    <!-- Friends -->
    <string name="friends_internet_error">Problem with connection. Please check your connectivity and try again.</string>
	<string name="friends_add_text">Add to friendlist</string>
	<string name="friends_delete_text">Remove from friendlist</string>
  	<string name="friends_add">Friend successfully added</string>
	<string name="friends_delete">Friend successfully deleted</string>
	<string name="friends_not_found">Username not found. Please input a valid username and try again.</string>
	<string name="friends_auto_find">That will be you!</string>
	<string name="friends_find_text">Find your friends in BooX</string>
	<string name="crossing_proposal">Crossing proposal</string>
    
    <!-- Search Book -->
    <string name="title_activity_book_search">Book Search</string>
    <string name="searchbook_searchby">Search by:</string>
    <string-array name="searchbook_searchby_options">
        <item>Title</item>
        <item>Author</item>
        <item>ISBN</item>
    </string-array>
    <string name="searchbook_scanbutton">Scan barcode</string>
    <string name="searchbook_searchbox_hint">Search here</string>
    <string name="title_activity_book_search_result">Search Results</string>
    <string name="not_found">Not found</string>

    <!-- Login -->
    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="login_button_text">Log in!</string>
    <string name="login_notauser">New to BooX? Sign up here!</string>
    <string name="login_logging">Logging in…</string>
    <string name="login_pleasewait">Please, wait a moment.</string>
    <string name="login_invalid">Invalid login. Try again!</string>
    <string name="login_internet_error">Problem with connection. Please check your connectivity and try again.</string>
    <string name="login_alphanum_error">Please use only alphanumeric characters.</string>

    <!-- Signup -->
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="signup_username_hint">username</string>
    <string name="signup_password_hint">password</string>
    <string name="signup_confirm_password_hint">repeat password</string>
    <string name="signup_fullname_hint">fullname</string>
    <string name="signup_zipcode_hint">zipcode</string>
    <string name="signup_button_text">Sign up!</string>
    <string name="signup_sending">Sending data…</string>
    <string name="signup_pleasewait">Please, wait a moment.</string>
    <string name="signup_confirm_pass_error">Password confirmation failed. Please try again.</string>
    <string name="signup_user_created">User successfully created</string>
    <string name="signup_already_exists_error">Username already exists. Please try again.</string>
    <string name="signup_internet_error">Problem with connection. Please check your connectivity and try again.</string>
    <string name="signup_empty_user_error">Please enter a valid username.</string>
    <string name="signup_empty_fullname_error">Please enter your name.</string>
    <string name="signup_password_length_error">Don\'t forget to enter a password.</string>
    <string name="signup_username_alphanum_error">Please use only alphanumeric characters for username.</string>
    <string name="signup_pass_alphanum_error">Please use only alphanumeric characters for password.</string>
    

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="set_new_username_hint">New username</string>
    <string name="set_new_password_hint">New password</string>
    <string name="set_confirm_password_hint">Repeat password</string>
    <string name="set_submitButton_text">Submit</string>

    <!-- About -->
    <string name="title_activity_about">About</string>
    <string name="about_authors_title">Creators:</string>
    <string name="about_author1">Beatriz Cortés</string>
    <string name="about_author2">Eliú Crespo</string>
    <string name="about_author3">Nicolás De Boni</string>
    <string name="about_author4">Juan Muñoz</string>
    <string name="about_author5">Mario Sanz</string>
    <string name="about_thanks_title">Special thanks:</string>
    <string name="about_collab1">Alberto García (Logo and icons)</string>
    <string name="about_collab2">Sergio Almenar (Valencian)</string>
	<string name="about_collab3">Marta Álvarez (Galician)</string>
	<string name="about_collab4">Vicente Castillo (German)</string>
	<string name="about_collab5">Vincenzo Di Girolamo (Italian)</string>
	<string name="about_collab6">Lis Díez (French)</string>
	<string name="about_collab7">Jony Garrido (Basque)</string>
	<string name="about_collab8">Rahul Nagar (Hindi)</string>
	<string name="about_collab9">Luis Navarro (Japanese)</string>
	<string name="about_collab10">Teresa Santamaría (Catalonian)</string>
	<string name="about_collab11">Lykourgos Sigalas (Greek)</string>
	<string name="about_collab12">Joonas Turunen (Finnish)</string>
	<string name="about_collab13">Silvia Carrasco (Project assistant)</string>

    <!-- User Profile -->
    <string name="title_activity_user_profile">User Profile</string>
    <string name="userprofile_viewuserbooks">View user books</string>
    
    <!-- Search Friend -->
    <string name="title_activity_search_friend">Find friends</string>
    <string name="title_activity_add_new_list">Add New list</string>
    
    <!-- Add List -->
    <string name="addlist_add_list_hint">List name here</string>
    
    <!-- Friend Books Activity -->
    <string name="title_activity_friend_books_activity">Friends Books</string>
    
</resources>