<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_settings_book_list"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
		android:icon="@drawable/ic_action_overflow" 
        android:menuCategory="container">
        <menu>
            <item
                 android:id="@+id/submenu_add"
                 android:title="@string/submenu_add"
                 android:icon="@android:drawable/ic_menu_add"/>
            <item
                 android:id="@+id/submenu_settings"
                 android:title="@string/submenu_settings"
                 android:icon="@android:drawable/ic_menu_preferences"/>
           	<item
                 android:id="@+id/submenu_about"
                 android:title="@string/submenu_about"
                 android:icon="@android:drawable/ic_menu_info_details"/>
        </menu>
    </item>
    
    <item android:id="@+id/search" 
          android:title="@string/bar_search"
          android:orderInCategory="90"
          android:showAsAction="ifRoom"
          android:icon="@drawable/ic_action_search" />   
</menu>