<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark" >

    <EditText
        android:id="@+id/set_new_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/set_new_username_hint"
        android:textColor="@android:color/primary_text_dark" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/set_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_new_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/set_new_password_hint"
        android:inputType="textPassword"
        android:textColor="@android:color/primary_text_dark" />

    <EditText
        android:id="@+id/set_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/set_new_password"
        android:layout_below="@+id/set_new_password"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/set_confirm_password_hint"
        android:inputType="textPassword"
        android:textColor="@android:color/primary_text_dark" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/set_submitButton_text"
        android:textColor="@android:color/holo_blue_light" />

</RelativeLayout>
